completed: features section

--- a/index.html
+++ b/index.html
@@ -143,47 +143,70 @@
         </div>
 
 
+<div class="features-section">
+    <div class="features-top-section">
+        <p class="moto">STABLE, PRODUCTION READY LINUX</p>
+        <h2>Rock solid, no matter the use-case.</h2>
+        <p class="moto-description">Rocky Linux rebuilds sources directly from RHEL®, so you can bet your best dollar
+            that you'll have a
+            super stable experience, no matter the use-case.</p>
+    </div>
+    <div class="features-cards-section">
 
-        <div class="features-section">
-            <p class="moto">STABLE, PRODUCTION READY LINUX</p>
-            <h2>Rock solid, no matter the use-case.</h2>
-            <p class="moto-description">Rocky Linux rebuilds sources directly from RHEL®, so you can bet your best dollar that you'll have a
-                super stable experience, no matter the use-case.</p>
-                
-            <div class="features-cards-section">
-                <div class="feature-card">
-
-                </div>
+        <div class="feature-card">
+            <div class="feature-card-title-section">
+                <img src="./static/general/production-ready.svg" alt="">
+                <p>Production Ready</p>
             </div>
+            <p class="card-description"> Rocky Linux is enterprise-ready, providing solid stability with regular updates and a 10-year support
+                lifecycle, all at no cost.</p>
         </div>
-
-
-        <div class="news-section">
-            <h2>Latest News</h2>
-            <p>We regularly share updates with the community about what's happening. Here's the latest.</p>
-
-            <div class="news-cards-section">
-                <div class="news-card">
-
-                </div>
+        <div class="feature-card">
+            <div class="feature-card-title-section">
+                <img src="./static/general/community-supported.svg" alt="">
+                <p>Community Supported</p>
             </div>
+            <p class="card-description">    The community, sponsors, and partners have invested with long-term commitments to ensure the project stays with the community.</p>
         </div>
-
-        <div class="companies-section">
-            <h2>Backed By</h2>
-            <div class="compaines-images-section">
-
+        <div class="feature-card">
+            <div class="feature-card-title-section">
+                <img src="./static/general/easy-migration.svg" alt="">
+                <p>Easy Migration</p>
             </div>
+            <p class="card-description">     Migrate from other Enterprise Linux distributions without sweating it. We provide an easy-to-use migration script, free of charge.</p>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="news-section">
+    <h2>Easy Migration</h2>
+    <p> Migrate from other Enterprise Linux distributions without sweating it. We provide an easy-to-use migration
+        script, free of charge.</p>
+
+    <div class="news-cards-section">
+        <div class="news-card">
 
         </div>
-    </main>
+    </div>
+</div>
+
+<div class="companies-section">
+    <h2>Backed By</h2>
+    <div class="compaines-images-section">
+
+    </div>
+
+</div>
+</main>
 
 
 
-    <footer>
+<footer>
 
 
-    </footer>
+</footer>
 
 
 </body>
