completed : supported by section

--- a/index.html
+++ b/index.html
@@ -263,12 +263,60 @@ could potentially be at risk. The vulnerability is related to...
         </div>
 
 
-
-
-
         <div class="companies-section">
             <h2>Backed By</h2>
-            <div class="compaines-images-section">
+            <div class="companies-cards-section">
+                <div class="companies-card">
+                    <img class="companies-card-webp" src="./static/companies/1.webp" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/2.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/3.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/4.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/5.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/6.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/7.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/8.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/9.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img class="companies-card-webp" src="./static/companies/10.webp" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/11.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img class="companies-card-webp" src="./static/companies/12.webp" alt="">
+                </div>
+                <div class="companies-card">
+                    <img class="companies-card-webp" src="./static/companies/13.webp" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/14.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/15.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/16.svg" alt="">
+                </div>
+                <div class="companies-card">
+                    <img src="./static/companies/17.svg" alt="">
+                </div>
 
             </div>
 
