--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
                     </div>
 
 
-                    <p class="news-card-description">We are excited to announce the general availability of Rocky Linux 8.10. This release is now available for the x86_64 and aarch64 architectures. Please...
+                    <p class="news-card-description">We are excited to announce the general availability of Rocky Linux
+                        8.10. This release is now available for the x86_64 and aarch64 architectures. Please...
                     </p>
                 </div>
 
@@ -231,7 +232,8 @@
                     </div>
 
 
-                    <p class="news-card-description">We are excited to announce the general availability of Rocky Linux 9.4. This release is now available for the x86_64, aarch64, ppc64le, and s390x...
+                    <p class="news-card-description">We are excited to announce the general availability of Rocky Linux
+                        9.4. This release is now available for the x86_64, aarch64, ppc64le, and s390x...
                     </p>
                 </div>
 
@@ -243,7 +245,7 @@
 
 
                     <p class="news-card-description">Rocky Linux included in new Azure Community Galleries Feature
-Downloading Rocky Linux from Azure community galleries has been more...
+                        Downloading Rocky Linux from Azure community galleries has been more...
                     </p>
                 </div>
 
@@ -254,8 +256,9 @@ Downloading Rocky Linux from Azure community galleries has been more...
                     </div>
 
 
-                    <p class="news-card-description">Last week, CVE-2024-2961 was announced. In brief, systems using glibc and serving php content
-could potentially be at risk. The vulnerability is related to...
+                    <p class="news-card-description">Last week, CVE-2024-2961 was announced. In brief, systems using
+                        glibc and serving php content
+                        could potentially be at risk. The vulnerability is related to...
                     </p>
                 </div>
 
@@ -324,9 +327,27 @@ could potentially be at risk. The vulnerability is related to...
     </main>
 
 
-
     <footer>
+        <div class="footer-top-section">
+            <a href="">Licensing</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Trademarks</a>
+        </div>
+        <div class="footer-social-section">
+            <a href="#"><img src="./static/social-icons/mastodon.png" alt=""></a>
+            <a href="#"><img src="./static/social-icons/facebook.png" alt=""></a>
+            <a href="#"><img src="./static/social-icons/instagram.png" alt=""></a>
+            <a href="#"><img src="./static/social-icons/threads.png" alt=""></a>
+            <a href="#"><img src="./static/social-icons/inkedin.png" alt=""></a>
+            <a href="#"><img src="./static/social-icons/twitterx.png" alt=""></a>
+            <a href="#"><img src="./static/social-icons/github.png" alt=""></a>
+            <a href="#"><img src="./static/social-icons/youtube.png" alt=""></a>
 
+
+        </div>
+        <div class="footer-trademark">
+            <p>Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. Red Hat Enterprise Linux, RHEL and CentOS are trademarks or registered trademarks of Red Hat, Inc. or its subsidiaries in the US and other countries. We are not affiliated with, endorsed by or sponsored by Red Hat, Inc.</p>
+        </div>
 
     </footer>
 
